# Encoder

./: README.md
src/: Encoder_Base.cpp  Encoder_Base.h  Encoder_STM32.cpp  Encoder_STM32.h  source_code.c  source_code.cpp  source_code.h
tests/: CMakeLists.txt  generate_test_binaries.py  test_code.c
